--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,12 +7,13 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.22.3",
+    "react-scripts": "^5.0.1",
     "socket.io-client": "^4.7.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts tenpst",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "browserslist": {
